# GH05T3-Sovereign

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: aethyro_kernel.py  aethyro_license.py  agent_loop.py  agent_marketplace.py  agent_registry.py  autonomy_policy.py  autotelic.py  cfo_agent.py  code_executor.py  coder_agent.py  companion.py  embeddings.py  gateway_v3.py  gh05t3_state.py  ghost_llm.py  ghost_tools.py  ghosteye_ocr.py  ghosteye_reactor.py  github_actions.py  hcm_vectors.py  job_runtime.py  killswitch_real.py  mcp_server.py  memory_cortex.py  memory_engine.py  ollama_gateway.py  peer_mesh.py  personas.py  phase6.py  pytest.ini  requirements-ci.txt  requirements-wsl.txt  requirements.txt  self_repair.py  server.py  sovereign_recall.py  start_v3.sh  stego.py  swarm_legacy.py  swarm_tasks.py  (+7 more)
backend/api/: binary_training.py  genome_api.py
gml_kernel/: Cargo.toml
gml_kernel/src/: ffi.rs  lib.rs  main.rs
gml_kernel/src/binary_inference/: mod.rs
gml_kernel/src/gh05t3/: core_loop.rs  integration.rs  mod.rs
gml_kernel/src/kernel/: agent.rs  evolution.rs  executor.rs  glyph.rs  glyph_block.rs  io.rs  memory.rs  mod.rs  model.rs  payload.rs  policy.rs
gml_kernel/src/naming/: engine.rs  mod.rs  roots.rs  templates.rs
gml_kernel/src/runtime/: agent.rs  episode.rs  mod.rs  model_policy.rs  tool_bus.rs
scripts/: bme_stress.py  broker_health.py  can_i_deploy.py  omni_brain_checkpoint.py  oss_smoke.py  profile_mvs_p95.py  publish_pacts.py  run_theory_lab_gate.py  set-pact-env.ps1  staging_verify.py  wsl_setup.sh  wsl_start.sh  wsl_stop.sh
(+388 files in other folders)
